fixed responsive bugs and refactoring code

--- a/index.html
+++ b/index.html
@@ -766,6 +766,10 @@
             </div>
         </div>
 
+        <div class="exchange__section container">
+            
+        </div>
+
     </main>
 
 
